--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,15 @@ defusedxml==0.5.0
 dj-database-url==0.4.2
 Django==2.0
 django-allauth==0.34.0
+flake8==3.5.0
 gunicorn==19.7.1
 idna==2.6
 kombu==4.1.0
+mccabe==0.6.1
 oauthlib==2.0.6
 psycopg2==2.7.3.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
 python3-openid==3.1.0
 pytz==2017.3
 requests==2.18.4
