Updated celery version.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,31 @@
-amqp==2.3.2
-billiard==3.5.0.4
-celery==4.2.1
+amqp==2.5.0
+billiard==3.6.0.0
+celery==4.3.0
 certifi==2018.10.15
 chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
+django-celery-beat==1.5.0
+django-timezone-field==3.0
 flake8==3.6.0
 gunicorn==19.9.0
 idna==2.7
-kombu==4.2.1
+kombu==4.6.3
 mccabe==0.6.1
 oauthlib==2.1.0
 psycopg2==2.7.6
 pycodestyle==2.4.0
 pyflakes==2.0.0
+python-crontab==2.3.8
+python-dateutil==2.8.0
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.20.1
 requests-oauthlib==1.0.0
+six==1.12.0
 twitter==1.18.0
 urllib3==1.24.1
-vine==1.1.4
+vine==1.3.0
 whitenoise==4.1
