--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2018.10.15
 chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.5.0
-Django==2.1.3
+Django==2.2.3
 django-allauth==0.38.0
 django-celery-beat==1.5.0
 django-timezone-field==3.0
@@ -22,10 +22,11 @@ python-crontab==2.3.8
 python-dateutil==2.8.0
 python3-openid==3.1.0
 pytz==2018.7
-requests==2.20.1
+requests==2.22.0
 requests-oauthlib==1.0.0
 six==1.12.0
+sqlparse==0.3.0
 twitter==1.18.0
-urllib3==1.24.1
+urllib3==1.25.3
 vine==1.3.0
 whitenoise==4.1
